# coro-conser-cuu-api

./: .env.example  .gitconfig  .gitignore  Dockerfile  Dockerrun.aws.json  README.md  docker-compose.yml  entrypoint.py  entrypoint.sh  pyproject.toml  requirements.txt
.config/pypoetry/: pyproject.toml
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml
.ebextensions/: 01-migrate.config  env.example.yaml  nginx.config
.github/workflows/: django_check_deploy.yml
aws/: parseenv.py  setenv.py  setup.py
bak/: manage.py
bak/bak/: asgi.py  settings.py  urls.py  wsgi.py
src/: main.py  manage.py
src/app/: urls.py
src/auth/: urls.py
src/cloud/: tests.py
src/cloud/management/commands/: __main__.py  cleancloud.py  deploy.py  setenvcloud.py  setupbucket.py  setupcloud.py
src/concerts/: admin.py  models.py  serializers.py  views.py
src/concerts/migrations/: 0001_initial.py
src/core/: settings.py  urls.py  views.py
src/gcloud/management/commands/: gcsetenv.py  gcsetup.py
src/utils/: tests.py
src/utils/parseenv/: __init__.py
