[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["gdelgado <gdelgado@controlla.com.mx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
django-filter = "^23.5"
djangorestframework = "^3.14.0"
mysqlclient = "^2.2.0"
djangorestframework-simplejwt = "^5.3.1"


[tool.poetry.group.deploy.dependencies]
daphne = "^4.0.0"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]